--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,30 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:background="@color/primary">
+    android:background="@color/primary"
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:scaleType="centerCrop"
+        android:layout_marginHorizontal="20dp"
+        android:src="@drawable/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/mainimg" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/login_pwd"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
-        android:drawableTint="@color/black"
         android:drawableLeft="@drawable/baseline_vpn_key_24"
         android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -46,8 +46,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
         android:drawableLeft="@drawable/baseline_email_24"
-        android:drawableTint="@color/black"
         android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
@@ -65,9 +65,9 @@
         android:layout_width="260dp"
         android:layout_height="57dp"
         android:backgroundTint="@color/secondary"
+        android:onClick="login"
         android:text="SIGN IN"
         android:textSize="15dp"
-        android:onClick="login"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't Have An Account?"
+        android:text="Don't have an account?"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,9 +95,9 @@
         android:id="@+id/regTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
         android:clickable="true"
         android:onClick="switchToRegisterActivity"
+        android:text="Register"
         android:textColor="@color/secondary"
         android:textSize="18sp"
         android:textStyle="bold"
