--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:text="Your ultimate marketplace For buying and selling"
+            android:text="Your ultimate marketplace for buying and selling"
             android:textSize="15sp" />
 
         <ImageView
