--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -1,95 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@color/primary">
+    android:background="@color/primary"
+    tools:context=".AddNewActivity">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPagerImages"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_border_background"
-        android:scaleType="centerCrop" />
-
-    <EditText
-        android:id="@+id/editTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ad Title"
-        android:minHeight="48dp"
-        android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:textColor="@android:color/black"
-        android:background="@drawable/rounded_border_background" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Description"
-        android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="10dp"
-        android:minHeight="96dp"
-        android:textColor="@android:color/black"
-        android:background="@drawable/rounded_border_background"
-        android:gravity="top" />
+        <ImageView
+            android:id="@+id/uploadImageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@drawable/rounded_border_background"
+            android:padding="30dp"
+            android:src="@drawable/outline_file_upload_24"
+            app:tint="@color/secondary" />
 
-    <EditText
-        android:id="@+id/editContact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Contact Info"
-        android:paddingStart="10dp"
-        android:paddingTop="5dp"
-        android:minHeight="48dp"
-        android:textColor="@android:color/black"
-        android:background="@drawable/rounded_border_background" />
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPagerImages"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_border_background"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
 
-    <Spinner
-        android:id="@+id/spinnerCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/white"
-        android:minHeight="48dp"
-        android:paddingStart="10dp"
-        android:textColor="@android:color/black"
-        android:textColorHint="@android:color/black"
-        android:background="@drawable/rounded_border_background" />
+        <Button
+            android:id="@+id/btnAddImages"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:text="Add more images"
+            android:textColor="@color/white"
+            android:visibility="gone" />
 
-    <Button
-        android:id="@+id/btnAddImages"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/secondary"
-        android:textColor="@color/black"
-        android:text="Add Images"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp" />
+        <EditText
+            android:id="@+id/editTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Ad Title"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
 
-    <Button
-        android:id="@+id/btnPreview"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/secondary"
-        android:textColor="@color/black"
-        android:text="Preview Ad"
-        android:layout_gravity="center"
-        android:layout_marginTop="12dp" />
+        <EditText
+            android:id="@+id/editDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_border_background"
+            android:gravity="top"
+            android:hint="Description"
+            android:minHeight="96dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:textColor="@android:color/black" />
 
-    <Button
+        <EditText
+            android:id="@+id/editContact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Contact Info"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <Spinner
+            android:id="@+id/spinnerCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_border_background"
+            android:backgroundTint="@android:color/white"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black" />
+
+        <Button
+            android:id="@+id/btnPreview"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@color/black"
+            android:text="Preview Ad"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSubmit"
-        android:layout_width="200dp"
-        android:backgroundTint="@color/secondary"
-        android:textColor="@color/black"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit Ad"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp" />
+        android:layout_marginTop="12dp"
+        android:background="@color/secondary"
+        android:text="Submit Ad"
+        android:textColor="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
