--- a/app/src/main/res/layout/admin_activity.xml
+++ b/app/src/main/res/layout/admin_activity.xml
@@ -2,73 +2,73 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/primary">
+    android:background="@color/primary"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/textViewAds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ads"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:text="Ads"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listViewAds"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/textViewAds"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/white" />
+        android:background="@color/white"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp" />
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
         android:layout_below="@id/listViewAds"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/textViewCategories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Categories"
-        android:textStyle="bold"
-        android:textSize="24sp"
         android:layout_below="@id/view"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:textColor="@android:color/black" />
+        android:text="Categories"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listViewCategories"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/textViewCategories"
+        android:layout_marginBottom="48dp"
+        android:background="@color/white"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp"
-        android:paddingTop="8dp"
-        android:layout_marginBottom="48dp"
-        android:background="@color/white" />
+        android:paddingTop="8dp" />
 
     <Button
         android:id="@+id/btnAddCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/secondary"
-        android:text="Add Category"
-        android:textColor="@android:color/black" />
+        android:text="Add category"
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
